# embedded-modern-cmake

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY_NOTICES.md  lgtm.yml
.github/workflows/: ci.yml
cmake/: FindBSP.cmake  FindCMSIS.cmake  FindFreeRTOS.cmake  FindHAL.cmake  stm32_f429zi_gcc.cmake
cmake/clang-tools/: clang-format.cmake  clang-tidy.cmake
cmake/freertos/: common.cmake  doxygen.cmake
cmake/googletest/: common.cmake
cmake/stm32/: common.cmake  devices.cmake  f0.cmake  f1.cmake  f2.cmake  f3.cmake  f4.cmake  f7.cmake  g0.cmake  g4.cmake  h7.cmake  l0.cmake  l1.cmake  l4.cmake  linker_ld.cmake  utilities.cmake
openocd/stm32_f4/: stm32_f4.cfg
src/: CMakeLists.txt  freertos_hook.cpp  main.cpp
src/bsp/: CMakeLists.txt
src/bsp/include/bsp/: bsp.h
src/bsp/src/: CMakeLists.txt
src/bsp/src/posix/: CMakeLists.txt  bsp.cpp
src/bsp/src/stm32f4/: CMakeLists.txt  bsp.cpp  stm32f4xx_hal_conf.h
src/bsp/tests/: CMakeLists.txt
src/bsp/tests/stm32f4/: test.cpp
src/freertos/: CMakeLists.txt
src/freertos/include/freertos/: FreeRTOSConfig.h
tools/: run-clang-format.py
